tests/snapshots/examples_fixtures/type_system__failing__199_effect_row_subset_ordered_missing_e422.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/199_effect_row_subset_ordered_missing_e422.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `run_needs_io_time`.

  examples/type_system/failing/199_effect_row_subset_ordered_missing_e422.flx:44:23
   |
35 | fn run_needs_io_time(f: (() -> Int with IO, Time)) -> Int with IO, Time {
   | ----------------------------------------------------------------------- `run_needs_io_time` expects `() -> Int with IO, Time` as the 1st parameter
36 |     f()
37 | }
... |
42 | 
43 | fn main() with IO, Time {
44 |     run_needs_io_time(pure_worker)
   |                       ^^^^^^^^^^^
   |                       ----------- this argument has type `() -> Int`

Note:
  expected argument type: () -> Int with IO, Time
  found argument type: () -> Int
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `() -> Int with IO, Time` value as the 1st argument.
== stdout ==
<not executed>
